# antiwebhook

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile.fly  README.md  docker-compose.yml  fly.toml  hex-logo-final.html
.claude/projects/-Users-barak-antiwebhooks/memory/: ci_status.md
.claude/skills/: build-test-validate.md  test-and-publish.md
.github/workflows/: ci.yml  gitleaks.yml  uptime.yml
blog/: one-url-two-consumers.md
docs/: ARCHITECTURE.md  EXAMPLES.md  IMPLEMENTATION.md  PRD-AGENT-PULL.md  PRODUCT.md
go/: README.md  dispatch.go  frames.go  go.mod  options.go  simplehook.go  simplehook_test.go  utils.go
javascript/auth/: Dockerfile  fly.toml  package-lock.json  package.json  tsconfig.json
javascript/auth/src/: auth.ts  config.ts  index.ts
javascript/sdk/cli/: README.md  package-lock.json  package.json
javascript/sdk/cli/src/: cli.ts
javascript/sdk/core/: README.md  package-lock.json  package.json
javascript/sdk/core/src/: agent.ts  client.ts  index.ts  types.ts  verify.ts
javascript/sdk/core/test/: agent.test.ts  verify.test.ts
javascript/sdk/express/: README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
javascript/sdk/express/src/: index.ts  types.ts  utils.ts
javascript/sdk/express/test/: helpers.ts  listen.test.ts  utils.test.ts
javascript/sdk/fastify/: README.md  package-lock.json  package.json
javascript/sdk/fastify/src/: index.ts  types.ts  utils.ts
javascript/sdk/fastify/test/: helpers.ts  listen.test.ts
javascript/sdk/hono/: README.md  package-lock.json  package.json
javascript/sdk/hono/src/: index.ts  types.ts
javascript/sdk/hono/test/: helpers.ts  listen.test.ts
javascript/sdk/mastra/: README.md  package-lock.json  package.json
javascript/sdk/mastra/src/: index.ts
javascript/sdk/playwright/: README.md  package-lock.json  package.json
javascript/sdk/playwright/src/: index.ts  provider.ts
javascript/webapp/: app.html  blog.html  docs.html  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
javascript/webapp/public/: llm.txt  robots.txt  sitemap.xml
javascript/webapp/src/: App.tsx  index.css  main.tsx
python/core/: README.md  pyproject.toml
python/core/src/simplehook_core/: __init__.py  client.py  types.py  utils.py
python/django/: README.md  pyproject.toml
python/django/src/simplehook_django/: client.py  utils.py
python/django/tests/: conftest.py  test_utils.py
python/fastapi/: README.md  pyproject.toml
python/fastapi/src/simplehook_fastapi/: __init__.py  client.py  utils.py
python/fastapi/tests/: conftest.py  test_client.py  test_utils.py
python/flask/: README.md  pyproject.toml
python/flask/src/antiwebhooks_flask/: client.py  utils.py
python/flask/src/simplehook_flask/: __init__.py  client.py  types.py  utils.py
python/flask/tests/: conftest.py  test_client.py  test_utils.py
rust-sdk/: Cargo.toml  README.md
rust-sdk/examples/: axum_example.rs
rust-sdk/src/: client.rs  dispatch.rs  frames.rs  lib.rs  options.rs
rust-sdk/tests/: integration.rs
scripts/: bump-version.sh  publish.sh
server/: Cargo.toml  Dockerfile
server/migrations/: 001_init.sql  002_auth.sql  002_betterauth.sql  003_billing_trial.sql  004_soft_delete_routes.sql  005_route_timeout.sql  006_event_route_mode.sql  007_listener_ids.sql  008_route_listener.sql  009_subscription_quantity.sql  010_github_oauth.sql  011_security_constraints.sql  012_password_reset.sql  013_agent_cursors.sql  014_impersonate.sql  README.md
server/src/: agent.rs  api.rs  app.rs  auth.rs  billing.rs  config.rs  db.rs  email.rs  error.rs  main.rs  proxy.rs  queue.rs  rate_limit.rs  signature.rs  trial_worker.rs  tunnel.rs  user_auth.rs
testApps/: boom.js  demo-routing.sh  e2e-sdk.test.js  test-all.sh
testApps/agent-pull/: index.js
testApps/axum/: Cargo.toml
testApps/axum/src/: main.rs
testApps/express/: README.md  index.js  package-lock.json  package.json
testApps/fastapi/: app.py  requirements.txt
testApps/fastify/: index.js  package-lock.json  package.json
testApps/flask/: README.md  app.py
testApps/go/: go.mod  main.go
testApps/hono/: index.js  package-lock.json  package.json
testApps/list-users/: index.js  package-lock.json  package.json
testApps/mastra/: README.md  index.ts  package-lock.json  package.json  smoke-test.ts
testApps/playwright/: package-lock.json  package.json  parallel-test.ts  smoke-test.ts
testApps/react/: README.md  index.html  package.json  server.js
testApps/visualizer/: index.js  package-lock.json  package.json
tests/: abuse.test.js  agent-prod.test.js  agent.test.js  auth.test.js  billing.test.js  debug-tunnel.js  e2e.test.js  migrations.test.js  package-lock.json  package.json  routing.test.js  signature.test.js  stats.test.js  stress.test.js
(+45 files in other folders)
