[package]
name = "simplehook"
version = "0.1.0"
edition = "2021"
description = "One line of code. Webhooks just work."
license = "MIT"
repository = "https://github.com/bnbarak/antiwebhook"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures-util = "0.3"
http = "1"
tracing = "0.1"
url = "2"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
tokio-test = "0.4"
