[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplehook-core"
version = "0.1.0"
description = "Shared core for Simplehook Python SDKs"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simplehook_core"]
