[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplehook-django"
version = "0.3.1"
description = "Stable webhook URLs for localhost. One line of code. Django adapter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "simplehook-core",
    "websockets>=12.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "django>=4.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simplehook_django"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
