[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplehook-fastapi"
version = "0.3.1"
description = "Stable webhook URLs for localhost. One line of code. FastAPI adapter."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "simplehook-core",
    "websockets>=12.0,<14.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simplehook_fastapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
