[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplehook-flask"
version = "0.1.0"
description = "Simplehook SDK for Flask"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0,<14.0",
]

[project.optional-dependencies]
dev = [
    "flask>=3.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/simplehook_flask"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
